--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ h1 {
 p {
   font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
-  font-size:14px;
-  color: #333333;
+  font-size:24px;
+  color: #a1e7b2;
 }
 
 .header {
